[project]
name = "cytnx-torch"
version = "0.1.0"
description = "Tensor network tools base on pytorch"
authors = [
    { name = "kaihsin", email = "kaihsinwu@gmail.com" }
]
dependencies = [
    "torch>=2.2.2",
    "torchvision>=0.17.2",
    "torchaudio>=2.2.2",
    "numpy>=1.26.4",
    "scipy>=1.13.0",
    "beartype>=0.18.2",
    "pytest>=8.1.1",
    "multipledispatch>=1.0.0",
    "pre-commit>=3.7.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[tool.rye.scripts]
clean = "git clean -f"
"coverage:run" = "coverage run -m pytest test"
"coverage:xml" = "coverage xml"
"coverage:html" = "coverage html"
"coverage:report" = "coverage report"
"coverage:open" = "open htmlcov/index.html"
"coverage:github" = { chain = ["coverage:run", "coverage:xml", "coverage:report"]}
"test:all" = "pytest test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.2.0",
    "ruff>=0.1.7",
    "isort>=5.12.0",
    "pytest>=7.4.4",
    "ipython>=8.18.1",
    "pre-commit>=3.5.0",
    "coverage>=7.4.0",
    "matplotlib>=3.8.2",
    "icecream>=2.1.3",
    "mkdocs>=1.5.3",
    "mike>=2.0.0",
    "pyinstrument>=4.6.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Assume Python 3.9.
target-version = "py310"
